changed database password from "postgres" to "pass"

--- a/Character/src/main/resources/bootstrap.properties
+++ b/Character/src/main/resources/bootstrap.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/character
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/character
 spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:pass}
 
 # Profile
 spring.profiles.active=${APP_PROFILE:localdevelopment}
