--- a/Item/src/main/resources/bootstrap.properties
+++ b/Item/src/main/resources/bootstrap.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/item
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/item
 spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:pass}
 
 # Profile
 spring.profiles.active=${APP_PROFILE:localdevelopment}
