front character+spell+item connected

--- a/Spell/src/main/resources/bootstrap.properties
+++ b/Spell/src/main/resources/bootstrap.properties
@@ -1,11 +1,11 @@
 spring.application.name=spell
 # Run
-server.port=9102
+server.port=9103
 server.servlet.context-path=/spell
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/spell
 spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:pass}
 
 # Profile
 spring.profiles.active=${APP_PROFILE:localdevelopment}
