--- a/Location/src/main/resources/bootstrap.properties
+++ b/Location/src/main/resources/bootstrap.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/location
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/location
 spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:pass}
+spring.datasource.password=${POSTGRES_PASSWORD:postgres}
 
 # Profile
 spring.profiles.active=${APP_PROFILE:localdevelopment}
